tests/errors/sem.expected-constant.func-sig-return.or
main :: () -> void {
    t := int;
    T := (int) -> t;
    T;
};
